FieldsetLayout: Styling fixes for `<legend>` labels
* Make the `<legend>` 'display: inline-table' rather than 'table'.
  A block-level table would push down elements that follow it,
  including the "help" icon, which in turn messed up the fields.
  Fixes T145682, T145678 and first half of T145680.
* Only style .oo-ui-labelElement-label with margin and padding
  if we have the .oo-ui-labelElement class (label is not empty).
  Fixes second half of T145680.

Follow-up to 9cf8b941a9c618f1d7ba2512508f576f70116e1e.

Bug: T145682
Bug: T145678
Bug: T145680

--- a/src/themes/apex/layouts.less
+++ b/src/themes/apex/layouts.less
@@ -108,7 +108,7 @@
 		margin-top: 2em;
 	}
 
-	> .oo-ui-labelElement-label {
+	&.oo-ui-labelElement > .oo-ui-labelElement-label {
 		font-size: 1.1em;
 		margin-bottom: 0.5em;
 		padding: 0.25em 0;
