--- a/src/themes/mediawiki/layouts.less
+++ b/src/themes/mediawiki/layouts.less
@@ -113,7 +113,7 @@
 		margin-top: 2em;
 	}
 
-	> .oo-ui-labelElement-label {
+	&.oo-ui-labelElement > .oo-ui-labelElement-label {
 		margin-bottom: 0.5em;
 		font-size: 1.1em;
 		font-weight: bold;
